# adaptive-multi-agent-rag-router

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: agents.md  architecture.md  dependency_rationale.md  design_decisions.md  evaluation.md  line_count.md  local_models.md  rag.md  routing.md  security.md
examples/configs/: agents.example.yaml  evaluation.scenarios.yaml  local.example.yaml  local_evaluation_cases.yaml  routing.example.yaml
examples/documents/: engineering_handbook.md  failure_recovery_playbook.md  local_evaluation_casebook.md  local_knowledge_base.md  product_specs.md  reliability_patterns.md  research_notes.md  routing_benchmark_notes.md
examples/scripts/: ask_example.py  evaluate_example.py  ingest_examples.py  run_demo.py
scripts/: build_local_demo.py  check_forbidden_names.py  count_lines.py  export_demo_payload.py  generate_assets.py  run_all_tests.py  syntax_check.py
src/amarr/agents/: base.py  coder.py  critic.py  executor.py  fallback.py  graph.py  messages.py  planner.py  recovery.py  researcher.py  retriever.py  state.py  supervisor.py  synthesizer.py  verifier.py
src/amarr/app/: dependencies.py  schemas.py  server.py
tests/: __init__.py
tests/integration/: test_agent_workflow.py  test_end_to_end_query.py  test_ingestion_pipeline.py  test_local_api.py
tests/unit/: test_agents.py  test_cli_commands.py  test_config_tools_paths.py  test_evaluation.py  test_memory.py  test_models.py  test_observability.py  test_quality_diagnostics_contracts.py  test_rag.py  test_router.py
(+89 files in other folders)
