[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-multi-agent-rag-router"
version = "0.1.0"
description = "Production-grade local NLP agent platform for multi-agent RAG and intelligent routing."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Shake Hasan" }]
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
amarr = "amarr.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
amarr = ["demo/static/*.html", "demo/static/*.css", "demo/static/*.js"]
